--- a/File Structures/File Structures.csproj
+++ b/File Structures/File Structures.csproj
@@ -48,6 +48,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attribute.cs" />
+    <Compile Include="Entity.cs" />
+    <Compile Include="File.cs" />
     <Compile Include="FormCreateAttribute.cs">
       <SubType>Form</SubType>
     </Compile>
