--- a/File Structures/File Structures.csproj
+++ b/File Structures/File Structures.csproj
@@ -63,6 +63,18 @@
     <Compile Include="FormCreateEntity.Designer.cs">
       <DependentUpon>FormCreateEntity.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormModifyAttribute.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormModifyAttribute.Designer.cs">
+      <DependentUpon>FormModifyAttribute.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormModifyEntity.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormModifyEntity.Designer.cs">
+      <DependentUpon>FormModifyEntity.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,6 +88,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormCreateEntity.resx">
       <DependentUpon>FormCreateEntity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormModifyAttribute.resx">
+      <DependentUpon>FormModifyAttribute.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormModifyEntity.resx">
+      <DependentUpon>FormModifyEntity.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
