--- a/File Structures/File Structures.csproj
+++ b/File Structures/File Structures.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="Attribute.cs" />
     <Compile Include="Entity.cs" />
+    <Compile Include="Entry.cs" />
     <Compile Include="File.cs" />
     <Compile Include="FormCreateAttribute.cs">
       <SubType>Form</SubType>
@@ -62,6 +63,12 @@
     </Compile>
     <Compile Include="FormCreateEntity.Designer.cs">
       <DependentUpon>FormCreateEntity.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormCreateEntry.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormCreateEntry.Designer.cs">
+      <DependentUpon>FormCreateEntry.cs</DependentUpon>
     </Compile>
     <Compile Include="FormModifyAttribute.cs">
       <SubType>Form</SubType>
@@ -88,6 +95,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormCreateEntity.resx">
       <DependentUpon>FormCreateEntity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormCreateEntry.resx">
+      <DependentUpon>FormCreateEntry.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormModifyAttribute.resx">
       <DependentUpon>FormModifyAttribute.cs</DependentUpon>
