Grammar to parse SQL, entities and attributes serialized

--- a/File Structures/File Structures.csproj
+++ b/File Structures/File Structures.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Antlr4.Runtime.Standard, Version=4.7.1.0, Culture=neutral, PublicKeyToken=e78b2c5abd1fcb3f, processorArchitecture=MSIL">
+      <HintPath>packages\Antlr4.Runtime.Standard.4.7.1.1\lib\net35\Antlr4.Runtime.Standard.dll</HintPath>
+    </Reference>
     <Reference Include="CSharpTest.Net.Collections, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>bin\Debug\CSharpTest.Net.Collections.dll</HintPath>
@@ -62,6 +65,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attribute.cs" />
+    <Compile Include="BDAGrammarBaseListener.cs" />
+    <Compile Include="BDAGrammarLexer.cs" />
+    <Compile Include="BDAGrammarListener.cs" />
+    <Compile Include="BDAGrammarParser.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="Entry.cs" />
     <Compile Include="File.cs" />
@@ -101,6 +108,7 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyErrorListener.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormCreateAttribute.resx">
