--- a/File Structures/packages.config
+++ b/File Structures/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr4.Runtime.Standard" version="4.7.1.1" targetFramework="net461" />
   <package id="GitLink" version="3.1.0" targetFramework="net461" developmentDependency="true" />
   <package id="MaterialSkin.Updated" version="0.2.2" targetFramework="net461" />
   <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net461" />
